// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toRedirectFiles creates appropriate metadata absolute url: fileContent 1`] = `
[
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=https://ianaio.io/">
    <link rel="canonical" href="https://ianaio.io/" />
  </head>
  <script>
    window.location.href = 'https://ianaio.io/' + window.location.search + window.location.hash;
  </script>
</html>",
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=https://ianaio.io/docs/intro?a=1">
    <link rel="canonical" href="https://ianaio.io/docs/intro?a=1" />
  </head>
  <script>
    window.location.href = 'https://ianaio.io/docs/intro?a=1';
  </script>
</html>",
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=https://ianaio.io/docs/intro#anchor">
    <link rel="canonical" href="https://ianaio.io/docs/intro#anchor" />
  </head>
  <script>
    window.location.href = 'https://ianaio.io/docs/intro#anchor';
  </script>
</html>",
]
`;

exports[`toRedirectFiles creates appropriate metadata for empty baseUrl: fileContent baseUrl=empty 1`] = `
[
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=/abc">
    <link rel="canonical" href="/abc" />
  </head>
  <script>
    window.location.href = '/abc' + window.location.search + window.location.hash;
  </script>
</html>",
]
`;

exports[`toRedirectFiles creates appropriate metadata for root baseUrl: fileContent baseUrl=/ 1`] = `
[
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=/abc">
    <link rel="canonical" href="/abc" />
  </head>
  <script>
    window.location.href = '/abc' + window.location.search + window.location.hash;
  </script>
</html>",
]
`;

exports[`toRedirectFiles creates appropriate metadata trailingSlash=false: fileContent 1`] = `
[
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=https://ianaio.io/abc">
    <link rel="canonical" href="https://ianaio.io/abc" />
  </head>
  <script>
    window.location.href = 'https://ianaio.io/abc' + window.location.search + window.location.hash;
  </script>
</html>",
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=https://ianaio.io/def.html">
    <link rel="canonical" href="https://ianaio.io/def.html" />
  </head>
  <script>
    window.location.href = 'https://ianaio.io/def.html' + window.location.search + window.location.hash;
  </script>
</html>",
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=https://ianaio.io/">
    <link rel="canonical" href="https://ianaio.io/" />
  </head>
  <script>
    window.location.href = 'https://ianaio.io/' + window.location.search + window.location.hash;
  </script>
</html>",
]
`;

exports[`toRedirectFiles creates appropriate metadata trailingSlash=true: fileContent 1`] = `
[
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=https://ianaio.io/abc">
    <link rel="canonical" href="https://ianaio.io/abc" />
  </head>
  <script>
    window.location.href = 'https://ianaio.io/abc' + window.location.search + window.location.hash;
  </script>
</html>",
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=https://ianaio.io/def.html">
    <link rel="canonical" href="https://ianaio.io/def.html" />
  </head>
  <script>
    window.location.href = 'https://ianaio.io/def.html' + window.location.search + window.location.hash;
  </script>
</html>",
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=https://ianaio.io/">
    <link rel="canonical" href="https://ianaio.io/" />
  </head>
  <script>
    window.location.href = 'https://ianaio.io/' + window.location.search + window.location.hash;
  </script>
</html>",
]
`;

exports[`toRedirectFiles creates appropriate metadata trailingSlash=undefined: fileContent 1`] = `
[
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=https://ianaio.io/abc">
    <link rel="canonical" href="https://ianaio.io/abc" />
  </head>
  <script>
    window.location.href = 'https://ianaio.io/abc' + window.location.search + window.location.hash;
  </script>
</html>",
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=https://ianaio.io/def.html">
    <link rel="canonical" href="https://ianaio.io/def.html" />
  </head>
  <script>
    window.location.href = 'https://ianaio.io/def.html' + window.location.search + window.location.hash;
  </script>
</html>",
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=https://ianaio.io/">
    <link rel="canonical" href="https://ianaio.io/" />
  </head>
  <script>
    window.location.href = 'https://ianaio.io/' + window.location.search + window.location.hash;
  </script>
</html>",
]
`;
